Mod Finalized, Pre-Refactor